// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> ResetPasswordForm should render the ResetPasswordForm component properly: ResetPasswordForm-default 1`] = `
<div>
  <form>
    <div
      class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
    >
      <p
        class="text-3xl text-white mb-0 mr-4"
      >
        Reset Passwoooord:
      </p>
    </div>
    <div
      class="mb-6"
    >
      <input
        class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
        name="email"
        placeholder="Email address"
        type="text"
        value="__MOCK__EMAIL__"
      />
    </div>
    <div
      class="text-center lg:text-left"
    >
      <button
        class="inline-block px-7 py-3 bg-primary-light text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-primary-dark hover:shadow-lg focus:bg-primary focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
        type="submit"
      >
        Send
      </button>
      <p
        class="text-lg text-white font-semibold mt-2 pt-1 mb-0"
      >
        Don't have an account?
         
        <a
          class="text-primary-light hover:text-primary-dark focus:text-primary transition duration-200 ease-in-out"
          href="#"
        >
          Register
        </a>
      </p>
    </div>
  </form>
</div>
`;

exports[`components >> ResetPasswordForm should render the ResetPasswordForm properly in loading state: ResetPasswordForm-loading 1`] = `
<div>
  <form>
    <div
      class="flex items-center my-4 before:flex-1 before:border-t before:border-gray-300 before:mt-0.5 after:flex-1 after:border-t after:border-gray-300 after:mt-0.5"
    >
      <p
        class="text-3xl text-white mb-0 mr-4"
      >
        Reset Passwoooord:
      </p>
    </div>
    <div
      class="mb-6"
    >
      <input
        class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
        name="email"
        placeholder="Email address"
        type="text"
        value="__MOCK__EMAIL__"
      />
    </div>
    <div
      class="text-center lg:text-left"
    >
      <button
        class="inline-block px-7 py-3 bg-primary-light text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-primary-dark hover:shadow-lg focus:bg-primary focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
        type="submit"
      >
        <div
          class="flex items-center justify-center"
        >
          <div
            class="spinner-border animate-spin inline-block w-8 h-8 border-4 rounded-full"
            role="status"
          >
            <span
              class="visually-hidden"
            >
              Loading...
            </span>
          </div>
        </div>
      </button>
      <p
        class="text-lg text-white font-semibold mt-2 pt-1 mb-0"
      >
        Don't have an account?
         
        <a
          class="text-primary-light hover:text-primary-dark focus:text-primary transition duration-200 ease-in-out"
          href="#"
        >
          Register
        </a>
      </p>
    </div>
  </form>
</div>
`;
